# govuk-flask-admin

./: .gitignore  FILTERING.md  README.md  TESTING.md  TODO.md  app.py  package-lock.json  package.json  pyproject.toml  pytest.ini  vite.config.js
src/assets/: main.js  main.scss
src/assets/components/: _filters.scss  _select-with-search.scss  _sort-buttons.scss  select-with-search.js
src/govuk_flask_admin/: __init__.py  widgets.py
src/govuk_flask_admin/static/govuk-frontend/: index-5ssVmKte.css  index-BTZCDR6Z.css  index-C5XVyGaB.css  index-CNELBCFg.css  index-ClNArRtg.css  index-D6GZeTvb.css  index-D6skZDu9.js  index-DG5LUUdd.css
src/govuk_flask_admin/templates/: select-with-search.html
src/govuk_flask_admin/templates/admin/: base.html  layout.html  lib.html
src/govuk_flask_admin/templates/admin/model/: create.html  details.html  edit.html  layout.html  list.html
src/govuk_flask_admin/templates/components/select/: macro.html  template.html
tests/: README.md  conftest.py
tests/e2e/: conftest.py  test_accessibility.py  test_bulk_actions_ui.py  test_filtering_ui.py  test_forms.py  test_navigation.py  test_progressive_enhancement.py  test_responsive.py  test_select_with_search.py
tests/integration/: test_bulk_actions.py  test_create_view.py  test_datetime_filters.py  test_delete_view.py  test_details_view.py  test_edit_view.py  test_export.py  test_filters.py  test_list_view.py  test_pagination.py  test_relationships.py  test_search.py  test_select_with_search_integration.py  test_sorting.py
tests/unit/: test_converter.py  test_date_filter.py  test_filter_converter.py  test_model_view.py  test_pagination_builder.py  test_select_with_search_widget.py  test_theme.py
vite/: package.json  vite.config.mjs
vite/src/: main.sass
vite/src/components/: _sidebar.sass  _subnav.scss
vite/src/layout/: sidebar.sass  subnav.scss  wide-container.sass
