[project]
name = "govuk-flask-admin"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "flask-admin>=2.0.0a0",
    "flask>=3",
    "govuk-frontend-wtf>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "faker>=37.4.2",
    "flask-sqlalchemy-lite>=0.1.0",
    "ruff>=0.6.9",
]

[tool.uv.sources]
flask-admin = { git = "https://github.com/flask-admin/flask-admin", branch = "master" }
