[project]
name = "govuk-flask-admin"
version = "0.2.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.0.0",
    "flask-admin>=2.0.0a0",
    "flask>=3",
    "govuk-frontend-jinja==3.8.0",
    "govuk-frontend-wtf==3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = false

[tool.hatch.build.targets.wheel]
packages = ["src/govuk_flask_admin"]
force-include = { "src/govuk_flask_admin/static" = "govuk_flask_admin/static" }

[tool.hatch.build.targets.sdist]
include = [
    "src/",
]
force-include = { "src/govuk_flask_admin/static" = "src/govuk_flask_admin/static" }

[tool.uv]
dev-dependencies = [
    "faker>=37.4.2",
    "flask-sqlalchemy-lite>=0.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
    "pytest-playwright>=0.7.1",
    "requests>=2.32.5",
    "ruff>=0.6.9",
]

[tool.uv.sources]
flask-admin = { git = "https://github.com/flask-admin/flask-admin", branch = "master" }
